generate 3D-language pair data using ChatCaptioner based method

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+3DLanguage_data/ChatCaptioner_based/objaverse_render/output
+3DLanguage_data/ChatCaptioner_based/output
 3DLLM_BLIP2-base/examples
 3DLLM_BLIP2-base/lavis/output
 # Byte-compiled / optimized / DLL files
