--- a/3DLLM_BLIP2-base/lavis/projects/blip2/train/finetune_3dmvvqa.yaml
+++ b/3DLLM_BLIP2-base/lavis/projects/blip2/train/finetune_3dmvvqa.yaml
@@ -1,12 +1,9 @@
- # Copyright (c) 2022, salesforce.com, inc.
- # All rights reserved.
- # SPDX-License-Identifier: BSD-3-Clause
- # For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
 
 model:
-  arch: blip2_opt
-  model_type: pretrain_opt2.7b
+  arch: blip2_t5
+  model_type: pretrain_flant5xl
   use_grad_checkpoint: False
+  mask_embedding: False
 
 datasets:
   3d_vqa: # name of the dataset builder
@@ -26,30 +23,30 @@ datasets:
     build_info:
         annotations:
           train:
-            storage: ./examples/all_refer_questions_train.json
+            storage: questions_only/train_questions.json
           test:
-            storage: ./examples/all_refer_questions_val.json
+            storage: questions_only/val_questions.json
           val:
-            storage: ./examples/all_refer_questions_val.json
+            storage: questions_only/test_questions.json
 
 run:
   task: 3d_vqa
   # optimizer
   lr_sched: "linear_warmup_cosine_lr"
-  init_lr: 1e-5
+  init_lr: 1e-4
   min_lr: 1e-5
   warmup_lr: 1e-8
   warmup_steps: 1000
   weight_decay: 0.05
   max_epoch: 100
-  batch_size_train: 8
-  batch_size_eval: 16
-  num_workers: 6
+  batch_size_train: 2
+  batch_size_eval: 4
+  num_workers: 4
   accum_grad_iters: 1
 
-  max_len: 200
+  max_len: 40
   min_len: 1
-  num_beams: 1
+  num_beams: 5
  
   inference_method: "generate"
 
@@ -57,13 +54,13 @@ run:
   output_dir: "output/BLIP2/3DQA"
 
   amp: True
-
+  resume_ckpt_path: pretrain_blip2_sam_flant5xl_v1.pth
   evaluate: False
   train_splits: ["train"]
   valid_splits: ["val"]
   test_splits: ["test"]
 
   device: "cuda"
-  world_size: 2
+  world_size: 16
   dist_url: "env://"
   distributed: True
