--- a/3DLLM_BLIP2-base/lavis/projects/blip2/train/finetune_scanqa.yaml
+++ b/3DLLM_BLIP2-base/lavis/projects/blip2/train/finetune_scanqa.yaml
@@ -1,12 +1,10 @@
- # Copyright (c) 2022, salesforce.com, inc.
- # All rights reserved.
- # SPDX-License-Identifier: BSD-3-Clause
- # For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
+
 
 model:
   arch: blip2_t5
   model_type: pretrain_flant5xl
   use_grad_checkpoint: False
+  mask_embedding: False
 
 datasets:
   3d_vqa: # name of the dataset builder
@@ -26,28 +24,28 @@ datasets:
     build_info:
         annotations:
           train:
-            storage: ./examples/ScanQA_v1.0/ScanQA_v1.0_train.json
+            storage: ScanQA_v1.0/ScanQA_v1.0_train.json
           test:
-            storage: ./examples/ScanQA_v1.0/ScanQA_v1.0_val.json
+            storage: ScanQA_v1.0/ScanQA_v1.0_val.json
           val:
-            storage: ./examples/ScanQA_v1.0/ScanQA_v1.0_val.json
+            storage: ScanQA_v1.0/ScanQA_v1.0_val.json
 
 run:
   task: 3d_vqa
   # optimizer
   lr_sched: "linear_warmup_cosine_lr"
-  init_lr: 1e-5
+  init_lr: 1e-4
   min_lr: 1e-5
   warmup_lr: 1e-8
   warmup_steps: 1000
   weight_decay: 0.05
   max_epoch: 100
-  batch_size_train: 8
-  batch_size_eval: 8
+  batch_size_train: 2
+  batch_size_eval: 4
   num_workers: 4
   accum_grad_iters: 1
 
-  max_len: 10
+  max_len: 40
   min_len: 1
   num_beams: 5
  
@@ -57,14 +55,13 @@ run:
   output_dir: "output/BLIP2/3DQA"
 
   amp: True
-  # resume_ckpt_path: lavis/output/{checkpoint}
-
+  resume_ckpt_path: pretrain_blip2_sam_flant5xl_v1.pth
   evaluate: False
   train_splits: ["train"]
   valid_splits: ["val"]
   test_splits: ["test"]
 
   device: "cuda"
-  world_size: 64
+  world_size: 16
   dist_url: "env://"
   distributed: True
