--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 3DLanguage_data/ChatCaptioner_based/objaverse_render/output
 3DLanguage_data/ChatCaptioner_based/output
+3DLanguage_data/ChatCaptioner_based/gen_features/data
 3DLLM_BLIP2-base/examples
 3DLLM_BLIP2-base/lavis/output
 3DLLM_BLIP2-base/tmp
 3DLLM_BLIP2-base/data
+3DLLM_BLIP2-base/pretrain_blip2_sam_flant5xl_v1.pth
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
